--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
                 <a href="/" class="menu-item">Home</a>
                 <a href="/about.html" class="menu-item">About</a>
                 <a href="/projects.html" class="menu-item">Projects</a>
-                <a href="https://github.com/Matt-MX" target="_blank" class="menu-item">GitHub</i></a>
+                <a href="https://github.com/pajama10000" target="_blank" class="menu-item">GitHub</i></a>
             </div>
             <div id="me">
-                <img src="./assets/img/me-nobg.png">
+                <img src="./assets/img/pajamajump.gif">
             </div>
             <div id="menu-background"></div>
         </div>
